--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "uvicorn>=0.34.0",
     "passlib>=1.7.4",
     "pydantic>=2.11.2",
+    "pika>=1.3.2",
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
