--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "passlib>=1.7.4",
     "pydantic>=2.11.2",
     "pika>=1.3.2",
+    "requests>=2.32.3",
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
